header and social

--- a/index.html
+++ b/index.html
@@ -5,11 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="http://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
     <title>MNTN - Landing Page</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
+    <article>
+
+        <!-- header block -->
+
+        <header>
+            <a class="logo-mntn-header" href="/"><img src="img/Logo.svg" alt=""></a>
+            <nav class="nav-header">
+                <ul class="nav-header-ul">
+                    <li class="list-item-equipment"><a href="/">Equipment</a></li>
+                    <li class="list-item-about-us"><a href="/">About us</a></li>
+                    <li class="list-item-blog"><a href="/">Blog</a></li>
+                </ul>
+            </nav>
+            <a class="account-header" href="/"><img src="img/Account.png" alt=""></a>
+        </header>
+
+        <!-- social section -->
+
+        <section class="section-social">
+            <p class="social-follow-us">Follow us</p>
+            <a class="social-instagram" href="/"><img src="img/social/instagram.png" alt="instagram"></a>
+            <a class="social-twitter" href="/"><img src="img/social/twitter.png" alt="twitter"></a>
+        </section>
+
+        <!-- content section -->
+
+        <section>
+
+        </section>
+
+
+
+
+
+    </article>
 
 </body>
 
