complete first part of main content

--- a/index.html
+++ b/index.html
@@ -37,13 +37,47 @@
 
         <!-- content section -->
 
-        <section>
+        <section class="section-first-content">
+            <img class="rectangle" src="img/content/Rectangle 2.1.png" alt="line">
+            <p class="section-first-content-text1">a hiking guide</p>
 
+            <p class="section-first-content-text2">Be prepared for the Mountains and beyond!</p>
+
+            <a class="first-content-scroll-down" href="/">scroll down
+                <img src="img/content/arrow_downward_24px.png" alt="arrow">
+            </a>
         </section>
 
+        <!-- main content -->
+
+        <section class="section-main-content">
+
+            <section class="section-main-content-01">
+                <p class="numeral1">01</p>
+                <section class="smc-block01">
+
+                    <img class="smc-line01" src="img/main content/01/Line.png" alt="line">
+                    <p class="smc-top01">get started</p>
+
+                    <p class="smc-head01">What level of hiker are you?</p>
+
+                    <p class="smc-text01">
+                        Determining what level of hiker you are can be an important tool when planning future hikes.
+                        Thishiking level guide will help you plan hikes according to different hike ratings set by
+                        various
+                        websites like All Trails and Modern Hiker. What type of hiker are you – novice, moderate,
+                        advanced moderate, expert, or expert backpacker?
+                    </p>
+
+                    <a class="smc-more01" href="/">read more
+                        <img src="img/main content/01/arrow_downward_24px.png" alt="arrow">
+                    </a>
+                </section>
+                <img class="smc-img01" src="img/main content/01/01.png" alt="01">
+            </section>
 
 
-
+        </section>
 
     </article>
 
