create section 2 of main content

--- a/index.html
+++ b/index.html
@@ -76,6 +76,32 @@
                 <img class="smc-img01" src="img/main content/01/01.png" alt="01">
             </section>
 
+            <section class="section-main-content-02">
+
+                <img class="smc-img02" src="img/main content/02/02.png" alt="02">
+
+                <p class="numeral2">02</p>
+
+                <section class="smc-block02">
+
+                    <img class="smc-line02" src="img/main content/01/Line.png" alt="line">
+                    <p class="smc-top02">Hiking Essentials</p>
+
+                    <p class="smc-head02">Picking the right Hiking Gear!</p>
+
+                    <p class="smc-text02">
+                        The nice thing about beginning hiking is that you don’t really need any special gear, you can
+                        probably get away with things you already have.
+                        Let’s start with clothing. A typical mistake hiking beginners make is wearing jeans and regular
+                        clothes, which will get heavy and chafe wif they get sweaty or wet.
+                    </p>
+
+                    <a class="smc-more02" href="/">read more
+                        <img src="img/main content/01/arrow_downward_24px.png" alt="arrow">
+                    </a>
+                </section>
+            </section>
+
 
         </section>
 
