create section 3 of msin content

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <p class="section-first-content-text2">Be prepared for the Mountains and beyond!</p>
 
-            <a class="first-content-scroll-down" href="/">scroll down
+            <a class="first-content-scroll-down" href="#scroll--down">scroll down
                 <img src="img/content/arrow_downward_24px.png" alt="arrow">
             </a>
         </section>
@@ -99,6 +99,29 @@
                     <a class="smc-more02" href="/">read more
                         <img src="img/main content/01/arrow_downward_24px.png" alt="arrow">
                     </a>
+                </section>
+            </section>
+
+
+            <section class="section-main-content-03">
+                <img class="smc-img03" src="img/main content/03/03.png" alt="03">
+                <p class="numeral3">03</p>
+                <section class="smc-block03">
+                    <img class="smc-line03" src="img/main content/01/Line.png" alt="line">
+                    <p class="smc-top03">where you go is the key</p>
+                    <p id="scroll--down" class="smc-head03">Understand Your Map & Timing</p>
+
+                    <p class="smc-text03">
+                        To start, print out the hiking guide and map. If it’s raining, throw them in a Zip-Lock bag.
+                        Read over the guide, study the map, and have a good idea of what to expect. I like to know what
+                        my next landmark is as I hike. For example, I’ll read the guide and know that say, in a mile, I
+                        make a right turn at the junction..
+                    </p>
+
+                    <a class="smc-more03" href="/">read more <img src="img/main content/02/arrow_downward_24px.png"
+                            alt="arrow">
+                    </a>
+
                 </section>
             </section>
 
