--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </a>
         </section>
 
-        <!-- main content -->
+        <!-- main content & footer-->
 
         <section class="section-main-content">
 
@@ -70,7 +70,7 @@
                     </p>
 
                     <a class="smc-more01" href="/">read more
-                        <img src="img/main content/01/arrow_downward_24px.png" alt="arrow">
+                        <img class="arrow--back" src="img/main content/01/arrow_downward_24px.png" alt="arrow">
                     </a>
                 </section>
                 <img class="smc-img01" src="img/main content/01/01.png" alt="01">
@@ -97,7 +97,7 @@
                     </p>
 
                     <a class="smc-more02" href="/">read more
-                        <img src="img/main content/01/arrow_downward_24px.png" alt="arrow">
+                        <img class="arrow--back" src="img/main content/01/arrow_downward_24px.png" alt="arrow">
                     </a>
                 </section>
             </section>
@@ -118,15 +118,59 @@
                         make a right turn at the junction..
                     </p>
 
-                    <a class="smc-more03" href="/">read more <img src="img/main content/02/arrow_downward_24px.png"
-                            alt="arrow">
+                    <a class="smc-more03" href="/">read more <img class="arrow--back"
+                            src="img/main content/02/arrow_downward_24px.png" alt="arrow">
                     </a>
 
                 </section>
             </section>
 
+            <footer class="footer">
+                <a class="logo-footer-link" href="/"><img src="img/Logo.svg" alt="logo"></a>
+                <p class="footer--text">Get out there & discover your next slope, mountain & destination!</p>
+                <p class="copyright">Copyright 2019 MNTN, Inc. Terms & Privacy</p>
+
+                <ul class="footer-ulist-01">
+                    <li class="list--items11">More on The Blog</li>
+
+                    <a href="/">
+                        <li>About MNTN</li>
+                    </a>
+
+                    <a href="/">
+                        <li>Contributors & Writers</li>
+                    </a>
+
+                    <a href="/">
+                        <li>Write For Us</li>
+                    </a>
+
+                    <a href="/">
+                        <li>Contact Us</li>
+                    </a>
+
+                    <a href="/">
+                        <li>Privacy Policy</li>
+                    </a>
+                </ul>
+
+                <ul class="footer-ulist-02">
+                    <li class="list--items21">More on MNTN</li>
+                    <a href="">
+                        <li>The Team</li>
+                    </a>
+                    <a href="">
+                        <li>Jobs</li>
+                    </a>
+                    <a href="">
+                        <li>Press</li>
+                    </a>
+                </ul>
+
+            </footer>
 
         </section>
+
 
     </article>
 
