background and buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 </head>
 
 <body>
+
+
+
     <article>
+
+        <div class="bg-content"></div>
+        <div class="vg"></div>
+        <div class="mg"></div>
+        <div class="bg-hero"></div>
+        <div class="hg"></div>
 
         <!-- header block -->
 
@@ -69,9 +78,12 @@
                         advanced moderate, expert, or expert backpacker?
                     </p>
 
-                    <a class="smc-more01" href="/">read more
-                        <img class="arrow--back" src="img/main content/01/arrow_downward_24px.png" alt="arrow">
-                    </a>
+                    <button class="rm1">
+                        <a class="read-more-arrow" href="/"> read more
+                            <img class="arrow--back" src="img/main content/01/arrow_downward_24px.png" alt="arrow">
+                        </a>
+                    </button>
+
                 </section>
                 <img class="smc-img01" src="img/main content/01/01.png" alt="01">
             </section>
@@ -172,7 +184,11 @@
         </section>
 
 
+
+
     </article>
+
+
 
 </body>
 
