--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <section class="smc-block03">
                     <img class="smc-line03" src="img/main content/01/Line.png" alt="line">
                     <p class="smc-top03">where you go is the key</p>
-                    <p id="scroll--down" class="smc-head03">Understand Your Map & Timing</p>
+                    <p class="smc-head03">Understand Your Map & Timing</p>
 
                     <p class="smc-text03">
                         To start, print out the hiking guide and map. If it’s raining, throw them in a Zip-Lock bag.
@@ -140,7 +140,7 @@
             <footer class="footer">
                 <a class="logo-footer-link" href="/"><img src="img/Logo.svg" alt="logo"></a>
                 <p class="footer--text">Get out there & discover your next slope, mountain & destination!</p>
-                <p class="copyright">Copyright 2019 MNTN, Inc. Terms & Privacy</p>
+                <p id="scroll--down" class="copyright">Copyright 2019 MNTN, Inc. Terms & Privacy</p>
 
                 <ul class="footer-ulist-01">
                     <li class="list--items11">More on The Blog</li>
@@ -183,12 +183,7 @@
 
         </section>
 
-
-
-
     </article>
-
-
 
 </body>
 
