--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
 <body>
 
-
-
-    <article>
+    <main>
 
         <div class="bg-content"></div>
         <div class="vg"></div>
@@ -39,18 +37,21 @@
         <!-- social section -->
 
         <section class="section-social">
-            <p class="social-follow-us">Follow us</p>
-            <a class="social-instagram" href="/"><img src="img/social/instagram.png" alt="instagram"></a>
-            <a class="social-twitter" href="/"><img src="img/social/twitter.png" alt="twitter"></a>
+            <h2 class="social-follow-us">Follow us</h2>
+            <a target="_blanck" rel="noreferrer noopener" class="social-instagram"
+                href="https://www.instagram.com/"><img src="img/social/instagram.png" alt="instagram"></a>
+
+            <a target="_blanck" rel="noreferrer noopener" class="social-twitter"
+                href="https://twitter.com/?lang=ru"><img src="img/social/twitter.png" alt="twitter"></a>
         </section>
 
         <!-- content section -->
 
         <section class="section-first-content">
-            <img class="rectangle" src="img/content/Rectangle 2.1.png" alt="line">
+            <img class="rectangle" src="img/content/Rectangle.png" alt="line">
             <p class="section-first-content-text1">a hiking guide</p>
 
-            <p class="section-first-content-text2">Be prepared for the Mountains and beyond!</p>
+            <h2 class="section-first-content-text2">Be prepared for the Mountains and beyond!</h2>
 
             <a class="first-content-scroll-down" href="#scroll--down">scroll down
                 <img src="img/content/arrow_downward_24px.png" alt="arrow">
@@ -62,13 +63,13 @@
         <section class="section-main-content">
 
             <section class="section-main-content-01">
-                <p class="numeral1">01</p>
+                <h2 class="numeral1">01</h2>
                 <section class="smc-block01">
 
-                    <img class="smc-line01" src="img/main content/01/Line.png" alt="line">
+                    <img class="smc-line01" src="img/main_content/01/Line.png" alt="line">
                     <p class="smc-top01">get started</p>
 
-                    <p class="smc-head01">What level of hiker are you?</p>
+                    <h2 class="smc-head01">What level of hiker are you?</h2>
 
                     <p class="smc-text01">
                         Determining what level of hiker you are can be an important tool when planning future hikes.
@@ -78,28 +79,28 @@
                         advanced moderate, expert, or expert backpacker?
                     </p>
 
-                    <button class="rm1">
-                        <a class="read-more-arrow" href="/"> read more
-                            <img class="arrow--back" src="img/main content/01/arrow_downward_24px.png" alt="arrow">
-                        </a>
-                    </button>
+
+                    <a class="read-more-arrow" href="/"> read more
+                        <img class="arrow--back" src="img/main_content/01/arrow_downward_24px.png" alt="arrow">
+                    </a>
+
 
                 </section>
-                <img class="smc-img01" src="img/main content/01/01.png" alt="01">
+                <img class="smc-img01" src="img/main_content/01/01.png" alt="01">
             </section>
 
             <section class="section-main-content-02">
 
-                <img class="smc-img02" src="img/main content/02/02.png" alt="02">
+                <img class="smc-img02" src="img/main_content/02/02.png" alt="02">
 
-                <p class="numeral2">02</p>
+                <h2 class="numeral2">02</h2>
 
                 <section class="smc-block02">
 
-                    <img class="smc-line02" src="img/main content/01/Line.png" alt="line">
+                    <img class="smc-line02" src="img/main_content/01/Line.png" alt="line">
                     <p class="smc-top02">Hiking Essentials</p>
 
-                    <p class="smc-head02">Picking the right Hiking Gear!</p>
+                    <h2 class="smc-head02">Picking the right Hiking Gear!</h2>
 
                     <p class="smc-text02">
                         The nice thing about beginning hiking is that you don’t really need any special gear, you can
@@ -109,19 +110,19 @@
                     </p>
 
                     <a class="smc-more02" href="/">read more
-                        <img class="arrow--back" src="img/main content/01/arrow_downward_24px.png" alt="arrow">
+                        <img class="arrow--back" src="img/main_content/01/arrow_downward_24px.png" alt="arrow">
                     </a>
                 </section>
             </section>
 
 
             <section class="section-main-content-03">
-                <img class="smc-img03" src="img/main content/03/03.png" alt="03">
-                <p class="numeral3">03</p>
+                <img class="smc-img03" src="img/main_content/03/03.png" alt="03">
+                <h2 class="numeral3">03</h2>
                 <section class="smc-block03">
-                    <img class="smc-line03" src="img/main content/01/Line.png" alt="line">
+                    <img class="smc-line03" src="img/main_content/01/Line.png" alt="line">
                     <p class="smc-top03">where you go is the key</p>
-                    <p class="smc-head03">Understand Your Map & Timing</p>
+                    <h2 class="smc-head03">Understand Your Map & Timing</h2>
 
                     <p class="smc-text03">
                         To start, print out the hiking guide and map. If it’s raining, throw them in a Zip-Lock bag.
@@ -131,7 +132,7 @@
                     </p>
 
                     <a class="smc-more03" href="/">read more <img class="arrow--back"
-                            src="img/main content/02/arrow_downward_24px.png" alt="arrow">
+                            src="img/main_content/02/arrow_downward_24px.png" alt="arrow">
                     </a>
 
                 </section>
@@ -143,47 +144,54 @@
                 <p id="scroll--down" class="copyright">Copyright 2019 MNTN, Inc. Terms & Privacy</p>
 
                 <ul class="footer-ulist-01">
+
                     <li class="list--items11">More on The Blog</li>
 
-                    <a href="/">
-                        <li>About MNTN</li>
-                    </a>
+                    <li>
+                        <a href="/">About MNTN</a>
+                    </li>
 
-                    <a href="/">
-                        <li>Contributors & Writers</li>
-                    </a>
+                    <li>
+                        <a href="/">Contributors & Writers</a>
+                    </li>
 
-                    <a href="/">
-                        <li>Write For Us</li>
-                    </a>
+                    <li>
+                        <a href="/">Write For Us</a>
+                    </li>
 
-                    <a href="/">
-                        <li>Contact Us</li>
-                    </a>
+                    <li>
+                        <a href="/">Contact Us</a>
+                    </li>
 
-                    <a href="/">
-                        <li>Privacy Policy</li>
-                    </a>
+                    <li>
+                        <a href="/">Privacy Policy</a>
+                    </li>
+
                 </ul>
 
                 <ul class="footer-ulist-02">
+
                     <li class="list--items21">More on MNTN</li>
-                    <a href="">
-                        <li>The Team</li>
-                    </a>
-                    <a href="">
-                        <li>Jobs</li>
-                    </a>
-                    <a href="">
-                        <li>Press</li>
-                    </a>
+
+                    <li>
+                        <a href="">The Team</a>
+                    </li>
+
+                    <li>
+                        <a href="">Jobs</a>
+                    </li>
+
+                    <li>
+                        <a href="">Press</a>
+                    </li>
+
                 </ul>
 
             </footer>
 
         </section>
 
-    </article>
+    </main>
 
 </body>
 
