addrd "./" to images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- header block -->
 
         <header>
-            <a class="logo-mntn-header" href="/"><img src="img/Logo.svg" alt=""></a>
+            <a class="logo-mntn-header" href="/"><img src="./img/Logo.svg" alt=""></a>
             <nav class="nav-header">
                 <ul class="nav-header-ul">
                     <li class="list-item-equipment"><a href="/">Equipment</a></li>
@@ -31,7 +31,7 @@
                     <li class="list-item-blog"><a href="/">Blog</a></li>
                 </ul>
             </nav>
-            <a class="account-header" href="/"><img src="img/Account.png" alt=""></a>
+            <a class="account-header" href="/"><img src="./img/Account.png" alt=""></a>
         </header>
 
         <!-- social section -->
@@ -39,22 +39,22 @@
         <section class="section-social">
             <h2 class="social-follow-us">Follow us</h2>
             <a target="_blanck" rel="noreferrer noopener" class="social-instagram"
-                href="https://www.instagram.com/"><img src="img/social/instagram.png" alt="instagram"></a>
+                href="https://www.instagram.com/"><img src="./img/social/instagram.png" alt="instagram"></a>
 
             <a target="_blanck" rel="noreferrer noopener" class="social-twitter"
-                href="https://twitter.com/?lang=ru"><img src="img/social/twitter.png" alt="twitter"></a>
+                href="https://twitter.com/?lang=ru"><img src="./img/social/twitter.png" alt="twitter"></a>
         </section>
 
         <!-- content section -->
 
         <section class="section-first-content">
-            <img class="rectangle" src="img/content/Rectangle.png" alt="line">
+            <img class="rectangle" src="./img/content/Rectangle.png" alt="line">
             <p class="section-first-content-text1">a hiking guide</p>
 
             <h2 class="section-first-content-text2">Be prepared for the Mountains and beyond!</h2>
 
             <a class="first-content-scroll-down" href="#scroll--down">scroll down
-                <img src="img/content/arrow_downward_24px.png" alt="arrow">
+                <img src="./img/content/arrow_downward_24px.png" alt="arrow">
             </a>
         </section>
 
@@ -66,7 +66,7 @@
                 <h2 class="numeral1">01</h2>
                 <section class="smc-block01">
 
-                    <img class="smc-line01" src="img/main_content/01/Line.png" alt="line">
+                    <img class="smc-line01" src="./img/main_content/01/Line.png" alt="line">
                     <p class="smc-top01">get started</p>
 
                     <h2 class="smc-head01">What level of hiker are you?</h2>
@@ -81,23 +81,23 @@
 
 
                     <a class="read-more-arrow" href="/"> read more
-                        <img class="arrow--back" src="img/main_content/01/arrow_downward_24px.png" alt="arrow">
+                        <img class="arrow--back" src="./img/main_content/01/arrow_downward_24px.png" alt="arrow">
                     </a>
 
 
                 </section>
-                <img class="smc-img01" src="img/main_content/01/01.png" alt="01">
+                <img class="smc-img01" src="./img/main_content/01/01.png" alt="01">
             </section>
 
             <section class="section-main-content-02">
 
-                <img class="smc-img02" src="img/main_content/02/02.png" alt="02">
+                <img class="smc-img02" src="./img/main_content/02/02.png" alt="02">
 
                 <h2 class="numeral2">02</h2>
 
                 <section class="smc-block02">
 
-                    <img class="smc-line02" src="img/main_content/01/Line.png" alt="line">
+                    <img class="smc-line02" src="./img/main_content/01/Line.png" alt="line">
                     <p class="smc-top02">Hiking Essentials</p>
 
                     <h2 class="smc-head02">Picking the right Hiking Gear!</h2>
@@ -110,17 +110,17 @@
                     </p>
 
                     <a class="smc-more02" href="/">read more
-                        <img class="arrow--back" src="img/main_content/01/arrow_downward_24px.png" alt="arrow">
+                        <img class="arrow--back" src="./img/main_content/01/arrow_downward_24px.png" alt="arrow">
                     </a>
                 </section>
             </section>
 
 
             <section class="section-main-content-03">
-                <img class="smc-img03" src="img/main_content/03/03.png" alt="03">
+                <img class="smc-img03" src="./img/main_content/03/03.png" alt="03">
                 <h2 class="numeral3">03</h2>
                 <section class="smc-block03">
-                    <img class="smc-line03" src="img/main_content/01/Line.png" alt="line">
+                    <img class="smc-line03" src="./img/main_content/01/Line.png" alt="line">
                     <p class="smc-top03">where you go is the key</p>
                     <h2 class="smc-head03">Understand Your Map & Timing</h2>
 
@@ -132,14 +132,14 @@
                     </p>
 
                     <a class="smc-more03" href="/">read more <img class="arrow--back"
-                            src="img/main_content/02/arrow_downward_24px.png" alt="arrow">
+                            src="./img/main_content/02/arrow_downward_24px.png" alt="arrow">
                     </a>
 
                 </section>
             </section>
 
             <footer class="footer">
-                <a class="logo-footer-link" href="/"><img src="img/Logo.svg" alt="logo"></a>
+                <a class="logo-footer-link" href="/"><img src="./img/Logo.svg" alt="logo"></a>
                 <p class="footer--text">Get out there & discover your next slope, mountain & destination!</p>
                 <p id="scroll--down" class="copyright">Copyright 2019 MNTN, Inc. Terms & Privacy</p>
 
